<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>epmc_hardware_interface</name>
  <version>1.0.0</version>
  <description>The ros2 hardware interface package for the Easy PID Motor Controller Module (i.e. L298N EPMC MODULE or a Custom EPMC Module)</description>

  <maintainer email="samukothings@gmail.com">Samuel Obiagba</maintainer>

  <author email="samukothings@gmail.com">Samuel Obiagba</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>libserial-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
